samples/_failures_safe/1761315487_0819be_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0a54ef3f.c: In function ‘main’:
./samples/SAFE/__tmp_0a54ef3f.c:158:28: error: missing terminating " character
  158 |                     printf("Error: Matrices must
      |                            ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_0a54ef3f.c:158:21: error: expected expression at end of input
  158 |                     printf("Error: Matrices must
      |                     ^~~~~~
./samples/SAFE/__tmp_0a54ef3f.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0a54ef3f.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0a54ef3f.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0a54ef3f.c:158:21: error: expected declaration or statement at end of input
